--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: SkyPvP
 main: Fludixx\SkyPvP\Main
 version: 1
-api: 3.0.0-ALPHA12
+api: 4.0.0
 author: Fludixx
 description: SkyPvP Plugin
 website: https://github.com/Fludixx
